[package]
name = "registry"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharded-slab = "0.0.4"
tracing = { git = "https://github.com/tokio-rs/tracing" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing" }
tracing-core = { git = "https://github.com/tokio-rs/tracing" }
serde_json = "1"

[patch.crates-io]
tracing-core = { git = "https://github.com/tokio-rs/tracing" }
